--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,19 @@
 .middle {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-button {
-  border: 0%;
+img {
+  width: 400px;
+  height: 400px;
 }
+.button1 {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
 body {
   background-color: whitesmoke;
 }
